[r=mpontillo][bug=][author=ricgard] Resolves page header resize, mobile display classes, checkbox alignment and restores loading spinner location on node listing

--- a/src/maasserver/static/scss/_base.typography.scss
+++ b/src/maasserver/static/scss/_base.typography.scss
@@ -50,7 +50,6 @@
 
   // Shared heading styles
   #{$headings()} {
-    margin: 10px 0;
     font-weight: 300;
     line-height: #{$line-height-ratio};
     color: $headline-color;
